# twinklr

./: .gitignore  CLAUDE.md  COMPREHENSIVE_REVIEW_FINDINGS.md  DEMO_SCRIPT_UPDATE.md  FEEDBACK_LEARNING_ANALYSIS.md  GROUP_PLANNER_COMPLETE_HANDOFF.md  GROUP_PLANNER_PHASE1_COMPLETE_FINAL.md  GROUP_PLANNER_PHASE1_PHASE2_COMPLETE.md  GROUP_PLANNER_PHASE3_COMPLETE.md  GROUP_PLANNER_PHASE3_STATUS.md  GROUP_PLANNER_PHASES_1_2_3_COMPLETE.md  LINE_BY_LINE_REVIEW.md  LYRICS_AGENT_COMPLETE.md  LYRICS_AGENT_IMPLEMENTATION.md  Makefile  PLANNING_CONTEXT_INTEGRATION.md  PROJECT_PERSONA.md  README.md  coverage.json  deferred_task.md  fixture_config.json  job_config.json  pyproject.toml  pyrightconfig.json  reachability_report.txt  unreachable_files.txt
.cursor/: development.md
.cursor/prompts/: feature.md
.serena/: project.yml
None/checkpoints/: None_audio.json
artifacts/need_a_favor/: need_a_favor_blinkb0t_mh.xsq
blinkb0t.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
blog/mh_intro/: 05_prompt_engineering.md  07_lessons_learned.md
blog/utils/: AGENT_PROMPT.md  BLOG_SPEC.md  ILLUSTRATION_INDEX_v2.md  README.md  illustrations.manifest.json  selections.json  twinklr_illustrations.py
changes/agent_patterns/: README.md  agent_provider.md  design.md  implementation_plan.md  migration_guide.md  provider_abstraction.md  state_machine.md
changes/curve_rework/: AGENT_PROGRESS.md  doc_alignment_checklist.md  gap_analysis.md  golden_fixtures.md  implementation_plan.md  legacy_curve_inventory.md  remediation_plan.md  technical_design.md
changes/templates/: curve_approach.md  mvp.md  research.md
changes/templates_rewrite/: .code_instructions.md  .session_start.md  01_core_concepts_foundations.md  02_configuration_rig_profiles.md  02_templates_methodology_design.md  03_logical_architecture_process.md  04_technical_architecture_design.md  05_current_system_migration.md  IMPLEMENTATION_PLAN_PART1.md  IMPLEMENTATION_PLAN_PART2.md  IMPLEMENTATION_PLAN_PART3.md  IMPLEMENTATION_SUMMARY.md  README.md
doc/: AGENT_LEARNING_SYSTEM.md  AUDIO_ENHANCEMENT_SETUP.md  CATEGORICAL_PARAMS_QUICK_REFERENCE.md  INDEX.md  PIPELINE_FRAMEWORK.md  TEMPLATE_AUTHORING_CATEGORICAL_PARAMS.md  checkpoints.md
doc/configs/: INDEX.md  QUICK_REFERENCE.md  README.md  app_config.example.json  fixture_config.example.json  job_config.example.json
doc/migration/: PHASE_0_ASYNC_MIGRATION.md
docs/: NEXT_SPRINT_DESIGN_SPECS.md  _config.yml  developer-guide.md  index.md  overview.md  pipeline_guide.md  user-guide.md
docs/mh_intro/: 00_overview.md  01_audio_analysis.md  02_audio_profiling.md  03_multi_agent_planning.md  04_categorical_planning.md  05_prompt_engineering.md  06_rendering_compilation.md  07_lessons_learned.md  audio_analysis.md  audio_profiling.md  categorical_planning.md  index.md  lessons_learned.md  multi_agent_planning.md  overview.md  prompt_engineering.md  rendering_compilation.md
docs/mh_templates/: 00_overview.md  01_template_anatomy.md  02_geometry.md  03_curves_generation.md  04_curves_semantics.md  05_movement.md  06_dimmer.md  07_timing_phase.md  08_transitions.md  09_compilation.md  10_whats_next.md  index.md
docs/plans/: 2026-02-19-fe-to-recipes-design.md  2026-02-19-fe-to-recipes-plan.md  2026-02-20-fe-to-recipes-overview.md  2026-02-20-fe-to-recipes-testing-plan.md
memory/: MEMORY.md
scripts/: EXAMPLES.md  README.md  README_TESTING.md  __init__.py  analyze_reachability.py  analyze_test_coverage.py  audio_batch.py  audit_template_params.py  build_feature_engineering.py  build_music_library_index.py  build_profile_corpus.py  cleanup_display_templates.py  debug_context.py  demo.py  demo_asset_pipeline.py  demo_audio_profile.py  demo_curve_looping_transitions.py  demo_display_renderer.py  demo_eval_report.py  demo_eval_report_phase0.py  demo_eval_report_phase1.py  demo_feature_engineering.py  demo_macro_planner.py  demo_moving_heads_pipeline.py  demo_profiling.py  demo_recipe_builder.py  demo_recipe_pipeline.py  demo_sequencer_pipeline.py  diagnose_clamping.py  diagnose_clamping_actual.py  enrich_builtin_templates.py  evaluate_recipe_dictionary.py  optimize_curve_params.py  query_template_retrieval.py  show_coverage_by_component.py  test_audio_pipeline.py  test_audio_simple.sh  test_groupplanner_phase3.py  test_rendering_pipeline.py  test_tilt_pose_bug.py  (+3 more)
scripts/analysis/: cross_lane_profile_analysis.py  normalize_unknown_effects.py  validate_rules_against_profiles.py
scripts/docs/: feature_engineering.md
scripts/validation/: README.md  __init__.py  plan.py  test_prompt_validation.py  test_schema_validation.py  validate_agent_artifacts.py  validate_artifacts.py  xsq.py
tests/: __init__.py  conftest.py  test_beat_alignment_quantization.py  test_channel_state.py  test_geometry.py  test_geometry_adjustment_e2e.py  test_geometry_coverage.py  test_geometry_optimization.py  test_geometry_smart_fallback.py  test_math_utils.py  test_plan_generator.py  test_planner_first_iteration.py  test_planner_second_iteration.py  test_tilt_roles.py
tests/fixtures/: example_rig_4fixtures.json  fan_pulse_template.json
tests/integration/: test_agent_sequencer_integration.py  test_audio_agent_integration.py  test_cache_integration.py  test_categorical_params_e2e.py  test_fe_unified_pipeline_e2e.py  test_handler_categorical_params.py  test_handler_type_safety.py  test_phase3_integration.py  test_phase3_runtime_integration.py  test_recipe_end_to_end.py  test_renderer_v2_e2e.py  test_renderer_v2_xlights_export.py  test_template_library.py  test_transitions_multi_layer.py
tests/unit/: test_base_movement_handler.py  test_boundary_enforcer.py  test_channel_state_v2.py  test_fixture_boundaries.py  test_fixture_config_boundaries.py  test_geometry_classification.py  test_logging_standards.py  test_movement_resolver.py  test_per_fixture_offsets.py  test_public_api.py  test_section_detection.py  test_segment_renderer_fixture_limits.py  test_sequencer_context.py  test_sequencer_refactored.py  test_session.py
utils/: effectdb_processing.py  img_demo.py  profile_sequence_pack.py  temp.py  video_demo.py
(+643 files in other folders)
