# BlinkB0t Workspace Configuration

[project]
name = "blinkb0t"
version = "0.2.0"
description = "BlinkB0t - AI-powered lighting sequencer for xLights"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "blinkb0t-core>=0.1.0",
    "blinkb0t-cli>=0.1.0",
    "tqdm>=4.67.1",
    "bezier>=2024.6.20",
    "noise>=1.2.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1.0",
    "mypy>=1.0",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = []

[tool.uv.workspace]
members = [
    "packages/blinkb0t/core",
    "packages/blinkb0t/cli",
]

[tool.uv.sources]
blinkb0t-core = { workspace = true }
blinkb0t-cli = { workspace = true }

[tool.ruff]
line-length = 100
target-version = "py312"
exclude = [
    ".git",
    ".venv",
    ".archive",
    "__pycache__",
    "*.egg-info",
]

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes
    "I",     # isort
    "B",     # flake8-bugbear
    "C4",    # flake8-comprehensions
    "UP",    # pyupgrade
    "TID252", # relative-imports
    # Code simplification & quality
    "SIM",   # flake8-simplify - Simplifies code patterns
    "PIE",   # flake8-pie - Miscellaneous checks
    "PLR",   # pylint refactor - Code complexity & refactoring
    # Type checking
    "TCH",   # flake8-type-checking - TYPE_CHECKING block handling
    # Modern Python patterns
    "PTH",   # flake8-use-pathlib - Prefer pathlib over os.path
    # Code hygiene
    "ERA",   # eradicate - Find commented-out code
    "T20",   # flake8-print - Catch print statements
    "N",     # pep8-naming - Consistent naming conventions
    # Performance
    "PERF",  # perflint - Performance anti-patterns
    # Ruff-specific
    "RUF",   # Ruff-specific rules - Various helpful checks
]
ignore = [
    "E501",    # line too long (handled by formatter)
    "PLR2004", # Magic value used in comparison (can be noisy)
    "TC003",   # Move imports into TYPE_CHECKING (can be noisy initially, enable later)
    "PLR091",  # Complexity rules (returns/branches/statements/arguments)
    "PERF401", # Manual list comprehension
    "T201",    # print() statements
    "N806",
]

[tool.ruff.lint.isort]
known-first-party = ["blinkb0t"]
force-sort-within-sections = true
split-on-trailing-comma = true

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "parents"

[tool.ruff.lint.flake8-type-checking]
strict = true

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
ignore_missing_imports = true
plugins = ["pydantic.mypy"]
exclude = [
    "tests/",
    "tests/.*",
    ".dev/",
    ".dev/.*",
    "scripts/*",
]

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "--cov=blinkb0t.core --cov-report=term-missing --cov-report=html"
